Redo i18n to permeate all functional layers via CORE.getUser().